# AuditorE14

./: .gitignore  pyproject.toml  test.py  test_candidates_boxes.py  test_inconsistencies.py  test_ocr.py  test_ocr2.py  test_render.py
data/: candidates.json
utils/image/: convert.py  crop.py
